--- a/package.json
+++ b/package.json
@@ -17,21 +17,28 @@
   "license": "UNLICENSED",
   "author": "Fresh Mozart",
   "type": "module",
-  "main": "index.ts",
+  "bin": {
+    "server": "./build/server.js",
+    "client": "./build/client.js"
+  },
+  "files": [
+    "build"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tsx index.ts"
+    "start": "npx tsx index.ts",
+    "build": "tsc && chmod 755 build/*.js"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
+    "@types/express": "^5.0.3",
     "tsx": "^4.20.4"
   },
   "dependencies": {
-    "@google-cloud/local-auth": "^3.0.1",
+    "@googleapis/docs": "^5.0.1",
     "@modelcontextprotocol/sdk": "^1.17.3",
-    "@types/express": "^5.0.3",
     "express": "^5.1.0",
-    "googleapis": "^156.0.0",
+    "google-auth-library": "^10.2.1",
     "openai": "^4.104.0",
     "zod": "^3.25.76"
   }
