--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && chmod 755 build/*.js && node build/client.js build/server.js"
+    "start": "rm -rf build && tsc && chmod 755 build/*.js && node build/client.js build/server.js"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
