--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "start": "rm -rf build && tsc && chmod 755 build/*.js && node build/client.js build/server.js"
   },
   "devDependencies": {
-    "@types/node": "^24.3.0",
     "@types/express": "^5.0.3",
+    "@types/node": "^24.3.0",
     "tsx": "^4.20.4"
   },
   "dependencies": {
     "@googleapis/docs": "^5.0.1",
     "@modelcontextprotocol/sdk": "^1.17.3",
+    "apify-client": "^2.15.1",
     "express": "^5.1.0",
     "google-auth-library": "^10.2.1",
     "openai": "^4.104.0",
