Added evaluation for the job vacancy filter prompt

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "rm -rf build && tsc && chmod 755 build/*.js && node build/client.js"
+    "start": "rm -rf build && tsc && chmod 755 build/*.js && node build/client.js",
+    "eval": "rm -rf build && tsc && chmod 755 build/*.js && node build/evaluate.js"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
@@ -36,6 +37,7 @@
   "dependencies": {
     "@openai/agents": "^0.0.17",
     "apify-client": "^2.15.1",
+    "openai": "^5.16.0",
     "zod": "^3.25.76"
   }
 }
