--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@openai/agents": "^0.1.3",
     "apify-client": "^2.15.1",
     "openai": "^5.21.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zod-v4": "npm:zod@^4.1.9"
   }
 }
