--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@openai/agents": "^0.1.6",
     "apify-client": "^2.15.1",
+    "mongodb": "6.20",
     "openai": "^5.21.0",
     "zod": "^3.25.76",
     "zod-v4": "npm:zod@^4.1.9"
