--- a/package.json
+++ b/package.json
@@ -43,12 +43,19 @@
   },
   "dependencies": {
     "@openai/agents": "^0.1.6",
+    "@tailwindcss/postcss": "^4.1.14",
     "apify-client": "^2.15.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.545.0",
     "mongodb": "6.20",
     "next": "^15.5.5",
     "openai": "^5.21.0",
+    "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.14",
     "zod": "^3.25.76",
     "zod-v4": "npm:zod@^4.1.9"
   }
